--- a/ETL Practice.ipynb
+++ b/ETL Practice.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "95385d97",
+   "id": "ebe01405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "260ecac0",
+   "id": "0411274e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6840,7 +6840,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "ba4d59c1",
+   "id": "8fdab016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6850,7 +6850,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2dc34a8f",
+   "id": "9c9d7920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6860,7 +6860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b087973d",
+   "id": "084ed372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6872,8 +6872,10 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c5aa4dde",
-   "metadata": {},
+   "id": "099e41c9",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6933,7 +6935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139bc04b",
+   "id": "912b9f7d",
    "metadata": {},
    "outputs": [],
    "source": []
